# mob

./: .gitignore  BIGBANG.md  Dockerfile  Dockerfile.agent  Dockerfile.agent-openclaw  Dockerfile.agent-pi  Dockerfile.agent-social  Dockerfile.webhook-gateway  Makefile  README.alt.md  README.md  docker-compose.yaml  install.sh  kind-config.yaml  pyproject.toml
deploy/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml
deploy/base/: agent-rbac.yaml  api-rbac.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  webhook-gateway.yaml
docs/: agent-template-contract.md
docs/ideation/: 2026-03-23-open-ideation.md
docs/plans/: 2026-03-23-001-fix-wire-agent-orchestration-loop-plan.md  2026-03-24-001-feat-cli-resource-reference-by-name-or-position-plan.md  2026-03-24-002-feat-agent-run-commands-restructure-plan.md  2026-03-24-003-feat-make-migrate-cli-command-plan.md  2026-03-24-004-feat-default-pydantic-ai-agent-image-plan.md  2026-03-24-005-docs-comprehensive-readme-plan.md  2026-03-27-001-refactor-separate-local-and-dev-setup-plan.md  2026-03-27-002-feat-env-management-command-plan.md  2026-03-27-003-fix-agent-run-state-mismatch-plan.md  2026-03-27-004-refactor-rename-agent-run-to-session-plan.md  (+6 more)
examples/: agent.yaml  pi-agent.yaml  social-agent.yaml
infra/: eks.tf  main.tf  rds.tf  variables.tf  versions.tf  vpc.tf
infra/aws/: eks.tf  main.tf  outputs.tf  (+4 more)
operator/: Cargo.toml  Dockerfile
operator/src/: error.rs  lib.rs  main.rs
operator/src/controller/: agent_run_controller.rs  mod.rs  session_controller.rs
operator/src/crd/: agent_run.rs  mod.rs  session.rs
operator/src/resources/: mod.rs  pod.rs
scripts/: dev-setup.sh  lib.sh  local-setup.sh
tests/: conftest.py
(+148 files in other folders)
